@@ -1,5 +1,6 @@
 1.99.15
-
+- some more error messages were put in the code
+- P4A_Mask::setIcon(), getIcon(), setIconSize and getIconSize() were added
 
 1.99.14
 - First Ajax Popup implementation
